# packaging/theia — Theia's OWN Debian packages (the ROS2-style decomposition).
#
# Five independent packages over the clean dependency DAG:
#
#   theia-framework  artheia Python wheel + bazel rules        (built by `theia
#                    release`, not here — pure-Python `Architecture: all`)
#   theia-runtime    runtime SOURCES + supervisor binary +     ← pkg_deb below
#                    tombstone + runtime protos (+ tdb python)
#   theia-services   com/per/sm/ucm/log/shwa binaries +        ← pkg_deb below
#                    services protos
#   theia-tools      supervisor-GUI + rtdb (need com gRPC)     (GUI is a CMake
#                    build, staged by `theia build-debs`)
#   theia-rf         rf_theia harness wheel (minus _selftest)  (built by `theia
#                    build-debs` — pure-Python `Architecture: all`)
#
# The C++ packages (runtime, services) are bazel pkg_deb targets here, built per
# --platforms=//rules/config:{host,rpi4} for amd64/arm64. The Python packages
# (framework, rf) wrap a `pip wheel` artifact and the GUI a CMake binary — those
# are assembled by `theia build-debs` (theia.py), which also emits the matching
# .ipk under dist/ipkg/ for embedded targets.
#
# Layout convention: everything lands under /opt/theia (THEIA_ROOT_DIR), bin/
# entries become 0755. Mirrors the install stage (_stage_local in theia.py /
# deploy/ansible tasks install-bundle.yml + setcap.yml).

load("//rules:deb.bzl", "pkg_deb")
load("//rules:opkg.bzl", "pkg_opkg")

package(default_visibility = ["//visibility:public"])

# ── theia-runtime postinst: theia:theia user + setcap the supervisor ─────────
# The supervisor runs as the UNPRIVILEGED `theia` system user, NOT root. It gets
# its two caps from FILE capabilities on the binary (setcap +eip below), which
# the kernel honors on exec for ANY user — so no root, no systemd
# AmbientCapabilities. Dropping root also frees host resources the old root
# supervisor squatted (e.g. a root-owned listener socket another tool wanted).
#
#   cap_sys_nice  — RT sched (SCHED_FIFO/RR) + CPU affinity on FC node threads
#   cap_net_admin — TIPC `node set netid` (rig isolation) + topology presence
#
# The `theia` user OWNS /opt/theia so the non-root supervisor can write its
# device-state (config/machine_instance, config/tipc_netid via theia-run) and
# read the release tree. The OTA agent (Mender, root) still lays releases/<ver>
# + flips `current`; a redeploy's chown re-asserts ownership. Idempotent — safe
# on upgrade/reinstall. Non-fatal if setcap/libcap2-bin is absent (the
# supervisor still runs, just without RT priority / TIPC cluster isolation).
_RUNTIME_POSTINST = """#!/bin/sh
set -e

# 1. The unprivileged service account (system user, no login, no home).
if ! getent group theia >/dev/null 2>&1; then
    groupadd --system theia
fi
if ! getent passwd theia >/dev/null 2>&1; then
    useradd --system --gid theia --no-create-home \\
            --home-dir /opt/theia --shell /usr/sbin/nologin theia
    echo "theia-runtime: created system user theia:theia"
fi

# 2. theia owns the install root so the non-root supervisor can write its
#    device-state under /opt/theia/config and read the release tree.
if [ -d /opt/theia ]; then
    chown -R theia:theia /opt/theia 2>/dev/null || true
fi

# 3. File caps on the supervisor — the source of its privilege, not root.
SUP=/opt/theia/bin/supervisor
SETCAP=$(command -v setcap || echo /usr/sbin/setcap)
if [ -x "$SETCAP" ] && [ -f "$SUP" ]; then
    if "$SETCAP" cap_sys_nice,cap_net_admin+eip "$SUP" 2>/dev/null; then
        echo "theia-runtime: setcap cap_sys_nice,cap_net_admin on $SUP"
    else
        echo "theia-runtime: setcap on $SUP failed (libcap2-bin?) — supervisor"\\
             "runs without RT priority / TIPC cluster isolation." >&2
    fi
fi
exit 0
"""

# ── theia-services postinst: re-assert theia ownership ───────────────────────
# theia-services Depends on theia-runtime, so dpkg installs runtime FIRST (its
# postinst creates the theia user + chowns /opt/theia), THEN unpacks the service
# binaries — which land root-owned. Re-chown here so com/per/sm/… are owned by
# the non-root theia user too. The user already exists (runtime made it); guard
# anyway so a manual services-only install still works. Idempotent.
_SERVICES_POSTINST = """#!/bin/sh
set -e
if ! getent passwd theia >/dev/null 2>&1; then
    getent group theia >/dev/null 2>&1 || groupadd --system theia
    useradd --system --gid theia --no-create-home \\
            --home-dir /opt/theia --shell /usr/sbin/nologin theia
fi
if [ -d /opt/theia ]; then
    chown -R theia:theia /opt/theia 2>/dev/null || true
fi

# shwa power plane (Jetson only): shwa runs as the NON-ROOT theia user, but
# nvpmodel drives root-only sysfs (/sys/.../cpu*/online) and its persisted default
# lives in the root-owned /etc/nvpmodel.conf (nvpmodel -m does NOT rewrite it — the
# DEFAULT line must be edited). File-caps on the shwa binary can't help — nvpmodel
# is a SEPARATE root tool shwa shells out to, and caps don't cross execve. So:
#   1. install a TINY bounded helper that sets nvpmodel.conf's PM_CONFIG DEFAULT to
#      a validated 0-9 id (and nothing else),
#   2. grant theia PASSWORDLESS sudo for EXACTLY nvpmodel + that helper — not
#      arbitrary sed/tee, so the grant can't be repurposed.
# A no-op on a non-Jetson box (no nvpmodel). shwa's Jetson backend prefixes its
# power commands with `sudo -n`; absent the rule it logs the gap and the power
# plane stays observe-only (read_power_mode via -q needs no privilege).
if command -v nvpmodel >/dev/null 2>&1; then
    NVP="$(command -v nvpmodel)"
    JC="$(command -v jetson_clocks 2>/dev/null || echo /usr/bin/jetson_clocks)"
    HELPER=/opt/theia/bin/theia-nvpmodel-persist
    # (1) the bounded helper: $1 must be a single 0-9 digit; rewrites ONLY the
    #     PM_CONFIG DEFAULT= line in the resolved nvpmodel.conf. Refuses anything else.
    cat > "$HELPER" <<'HLP'
#!/bin/sh
set -e
id="$1"
case "$id" in [0-9]) : ;; *) echo "usage: theia-nvpmodel-persist <0-9>" >&2; exit 2 ;; esac
conf="$(readlink -f /etc/nvpmodel.conf)"
[ -f "$conf" ] || { echo "no nvpmodel.conf" >&2; exit 1; }
sed -ri "s/(< *PM_CONFIG +DEFAULT=)[0-9]+/\\1${id}/" "$conf"
HLP
    chmod 0755 "$HELPER"
    if [ -d /etc/sudoers.d ]; then
        printf 'theia ALL=(root) NOPASSWD: %s, %s, %s\\n' "$NVP" "$JC" "$HELPER" \\
               > /etc/sudoers.d/theia-shwa-power
        chmod 0440 /etc/sudoers.d/theia-shwa-power
        # validate; a bad drop-in would break ALL sudo, so remove it if invalid.
        if command -v visudo >/dev/null 2>&1 && ! visudo -cf /etc/sudoers.d/theia-shwa-power >/dev/null 2>&1; then
            rm -f /etc/sudoers.d/theia-shwa-power
            echo "theia-services: shwa power sudoers rule invalid — removed (power plane observe-only)" >&2
        else
            echo "theia-services: granted theia NOPASSWD sudo for nvpmodel + persist helper (shwa power plane)"
        fi
    fi
fi
exit 0
"""

_VERSION = "0.3.0"

# Debian runtime/-dev split: a RUNTIME-ONLY machine gets just the binaries (+ the
# shared libs they link); everything build-time — sources, headers, protos, the
# .art tree, the Python manifest — lives in the matching -dev package, which
# Depends on the runtime one. A target that only RUNS Theia installs
# theia-runtime [+ theia-services]; a workspace that BUILDS apps adds the -dev's.

# ── theia-runtime (machine) ──────────────────────────────────────────────────
# Just the supervisor binary — the fabric an app system runs under. No build
# artifacts. tdb (python probe) is added by `theia build-debs` (no bazel artifact).
# Architecture is derived from the target cpu (not the build host) so a native
# arm64 build OR an x86→arm64 cross both stamp the right Debian arch. Without this
# the rule's default "amd64" lands on arm64 debs (the binaries are aarch64 but the
# control file lies → dpkg --force-architecture needed on the rig). One shared
# select for every theia-* deb below.
_DEB_ARCH = select({
    "@pero_theia//rules/config:is_arm64": "arm64",
    "//conditions:default": "amd64",
})

pkg_deb(
    name = "theia-runtime_deb",
    package = "theia-runtime",
    version = _VERSION,
    description = "Theia runtime: the supervisor binary (run-time fabric)",
    section = "misc",
    arch = _DEB_ARCH,
    postinst = _RUNTIME_POSTINST,
    files = {
        "//platform/supervisor/main:supervisor": "/opt/theia/bin/supervisor",
        # on-device config-migration executor for the SWP overlay path (C++, no
        # probe) — the theia-swp module calls it; see tools/theia_migrate.
        "//tools/theia_migrate:theia-migrate": "/opt/theia/bin/theia-migrate",
    },
)

# ── theia-runtime-dev (build) ────────────────────────────────────────────────
# Ships the runtime + tombstone as a CONSUMABLE BAZEL MODULE tree under
# /opt/theia/platform/... (NOT the legacy /opt/theia/src). With the module root
# (/opt/theia/MODULE.bazel = `pero_theia`, from theia-framework), a consuming
# workspace's `@pero_theia//platform/runtime:runtime`, `:runtime_proto_cc`, and
# `@pero_theia//platform/supervisor/tombstone:tombstone` resolve EXACTLY as in
# the repo — same labels, same workspace-relative paths. The trimmed module
# BUILD files (no test suite / dist filegroups) ship via `files`; the sources
# via `data` (short_path `platform/...` → /opt/theia/platform/...).
pkg_deb(
    name = "theia-runtime-dev_deb",
    package = "theia-runtime-dev",
    version = _VERSION,
    description = "Theia runtime dev: the pero_theia bazel module (runtime + tombstone sources + BUILD) + runtime .art",
    section = "devel",
    # libnanopb-dev: pb.h + libprotobuf-nanopb.a the runtime sources compile/link
    # against. build-essential: gcc/g++ for the workspace bazel build.
    depends = "theia-runtime, theia-framework, theia-system-dev, libnanopb-dev, build-essential",
    files = {
        # Trimmed module BUILD files at their real package paths.
        "//packaging/theia/module:runtime.BUILD.bazel":
            "/opt/theia/platform/runtime/BUILD.bazel",
        "//packaging/theia/module:tombstone.BUILD.bazel":
            "/opt/theia/platform/supervisor/tombstone/BUILD.bazel",
    },
    data = [
        # Runtime + tombstone SOURCES — short_path platform/... → /opt/theia/
        # platform/... (drops the old `src/` so the module paths match the repo).
        "//platform/runtime:runtime_dist_srcs",
        "//platform/supervisor/tombstone:tombstone_dist_hdrs",
        # NOTE: the supervisor .art (system.supervisor package) now ships in
        # theia-system-dev as part of the whole system/ tree — NOT here — so the
        # two debs don't both own /opt/theia/system/supervisor/*.
    ],
    prefix = "/opt/theia",
    strip_prefix = "",
)

# ── theia-services (machine) ─────────────────────────────────────────────────
# The ARA platform service binaries + the shared lib per links. No build files.
pkg_deb(
    name = "theia-services_deb",
    package = "theia-services",
    version = _VERSION,
    description = "Theia ARA platform services: com, per, sm, ucm, log, shwa (binaries)",
    section = "misc",
    arch = _DEB_ARCH,
    postinst = _SERVICES_POSTINST,
    # System .so's per's etcd stack pulls in at load time: grpc++ + the
    # reflection-capable protobuf + openssl (via libssl). The etcd client itself
    # is now STATICALLY linked into per (//third_party:etcd_cc → cmake()
    # libetcd-cpp-api-core.a), so there is no libetcd-cpp-api.so to bundle or
    # ship — and no cpprest dep (the async client isn't linked).
    # com + per link grpc++/libprotobuf SHARED on x86, so the dep names track the
    # BUILD distro's soname generation (select on --define distro=…). The arm64
    # build static-links the grpc/protobuf closure from the sysroot .a's → only
    # theia-runtime. See //rules/config:distro_ubuntu24.
    depends = select({
        "@pero_theia//rules/config:is_arm64": "theia-runtime",
        # noble (24.04) fleet build — same soname-versioned names as ubuntu24;
        # keyed on theia_target=noble (the `theia dist --arch noble` define) so a
        # native noble build gets the RIGHT Depends, not the jammy default.
        "@pero_theia//rules/config:target_noble":
            "theia-runtime, libgrpc++1.51t64, libprotobuf32t64",
        "@pero_theia//rules/config:distro_ubuntu24":
            "theia-runtime, libgrpc++1.51t64, libprotobuf32t64",
        "//conditions:default":   # Ubuntu 22.04 host (the release box)
            "theia-runtime, libgrpc++1, libprotobuf23",
    }),
    # The FULL ARA service set — every FC the factory full-services rig
    # (manifest.services.rig) supervises, so the executor.json tree and
    # the shipped binaries match (a child in the tree with no binary fails to exec
    # → 127 → takes services_sup down). Keep this in lockstep with manifest.services.rig.
    files = {
        "//services/com/main:com": "/opt/theia/bin/com",
        "//services/per/main:per": "/opt/theia/bin/per",
        "//services/sm/main:sm": "/opt/theia/bin/sm",
        "//services/ucm/main:ucm": "/opt/theia/bin/ucm",
        "//services/vucm/main:vucm": "/opt/theia/bin/vucm",
        "//services/log/main:log": "/opt/theia/bin/log",
        "//services/shwa/main:shwa": "/opt/theia/bin/shwa",
        "//services/nm/main:nm": "/opt/theia/bin/nm",
        "//services/osi/main:osi": "/opt/theia/bin/osi",
        "//services/phm/main:phm": "/opt/theia/bin/phm",
        "//services/rds/main:rds": "/opt/theia/bin/rds",
        "//services/tsync/main:tsync": "/opt/theia/bin/tsync",
        "//services/crypto/main:crypto": "/opt/theia/bin/crypto",
        "//services/diag/main:diag": "/opt/theia/bin/diag",
        "//services/fw/main:fw": "/opt/theia/bin/fw",
        "//services/idsm/main:idsm": "/opt/theia/bin/idsm",
    },
)

# ── theia-services-dev (build) ───────────────────────────────────────────────
# Everything a WORKSPACE needs from services to build/deploy against them: the
# service .art tree at its FQN-mirrored path /opt/theia/system/services (so it
# lines up with theia-system-dev's system/ tree — ONE services .art location,
# not a duplicate flat /opt/theia/services), the generated service protos, and
# the Python services manifest. Folds in the former theia-services-manifest.
#
# LAYERING: this package OWNS the services .art tree. theia-system-dev (which
# ships system.art with `import system.services.*`) Depends on THIS package, so
# system/services is guaranteed present whenever system.art is — no postinst
# toggle needed; the import always resolves.
pkg_deb(
    name = "theia-services-dev_deb",
    package = "theia-services-dev",
    version = _VERSION,
    description = "Theia services development files: .art tree (system/services), protos, Python manifest (manifest.py + executor.py sidecar)",
    section = "devel",
    depends = "theia-services, theia-framework",
    # The service .art tree → /opt/theia/system/services (FQN-mirrored: the
    # services_manifest short_paths are `system/services/...`, so prefix
    # /opt/theia + no strip lands them at /opt/theia/system/services/...).
    data = ["//system/services:services_manifest"],
    prefix = "/opt/theia",
    strip_prefix = "",
    # protos → /opt/theia/proto/... ; the Python manifest → /opt/theia/manifest/
    # services/ as a PLAIN DATA dir (NOT site-packages). The generated rig loads
    # manifest.py / executor.py by PATH from $THEIA_ROOT/manifest/services/
    # (theia.py `_load_services_manifest`), so nothing puts a generic top-level
    # `manifest` package on the user's PYTHONPATH and there's no hardcoded python
    # version in the path. Explicit dests because they live under different source
    # roots than the .art `data` tree above.
    files = {
        "//platform/proto/system/services/com:com.proto": "/opt/theia/proto/system/services/com/com.proto",
        "//platform/proto/system/services/per:per.proto": "/opt/theia/proto/system/services/per/per.proto",
        "//platform/proto/system/services/sm:sm.proto": "/opt/theia/proto/system/services/sm/sm.proto",
        "//platform/proto/system/services/ucm:ucm.proto": "/opt/theia/proto/system/services/ucm/ucm.proto",
        "//platform/proto/system/services/log:log.proto": "/opt/theia/proto/system/services/log/log.proto",
        "//platform/proto/system/services/shwa:shwa.proto": "/opt/theia/proto/system/services/shwa/shwa.proto",
        "//manifest/services:manifest.py": "/opt/theia/manifest/services/manifest.py",
        "//manifest/services:executor.py": "/opt/theia/manifest/services/executor.py",
    },
)

# ── theia-system-dev (build) ─────────────────────────────────────────────────
# The whole top-level `system/` tree — the .art CONTRACTS (services, supervisor,
# platform runtime, the tdb client model) at their FQN-mirrored paths
# (/opt/theia/system/services/<fc>/…, /opt/theia/system/tools/tdb/tdb.art) plus
# the .proto SOURCES under /opt/theia/platform/proto so a deb-installed host can
# materialize a probe-backed client (tdb / rtdb / rf-theia's supervisor adapter)
# straight from `$THEIA_ROOT/system/tools/tdb/tdb.art` + proto_root
# `$THEIA_ROOT/platform/proto` — NO source checkout, NO sibling tools/ path.
#
# Why its own package: `system/` was consolidated out of the per-FC <component>/
# system/ dirs into one top-level tree; this deb ships that tree as a unit
# instead of scattering it across runtime-dev (supervisor.art) + services-dev
# (services .art only). It Depends on services-dev (the matching protos/manifest)
# and theia-framework (the artheia probe). The runtime control proto is laid out
# flat under platform_runtime/ (matching `import "platform_runtime/runtime.proto"`
# every consumer uses) so supervisor.proto's cross-package import resolves from
# the proto_root — the committed platform/proto/platform_runtime symlink doesn't
# survive packaging, so we place runtime.proto at that path explicitly.
pkg_deb(
    name = "theia-system-dev_deb",
    package = "theia-system-dev",
    version = _VERSION,
    description = "Theia system contracts: the full system/ .art tree (services + supervisor + tools/tdb) + .proto sources, for probe-backed clients (tdb/rtdb/rf-theia)",
    section = "devel",
    depends = "theia-services-dev, theia-framework",
    data = [
        # The system/ .art tree MINUS the services tree → /opt/theia/system/...
        # (short_path `system/...` mirrors the package FQN: system.supervisor,
        # system.tools.tdb, system.platform.runtime/msgs, and system.art itself
        # which imports system.services.*). The services .art comes from
        # theia-services-dev (a hard Depends), so that import always resolves.
        "//system:art_sources_no_services",
        # All service + supervisor .proto SOURCES → /opt/theia/platform/proto/...
        # (short_path `platform/proto/system/...`), the probe codec's proto_root.
        "//platform/proto:proto_sources",
    ],
    # The runtime control proto at the flat platform_runtime/ path the
    # `import "platform_runtime/runtime.proto"` convention resolves to under the
    # proto_root (the repo uses a symlink here; packaging places the real file).
    files = {
        "//platform/runtime:proto/platform_runtime/runtime.proto":
            "/opt/theia/platform/proto/platform_runtime/runtime.proto",
    },
    prefix = "/opt/theia",
    strip_prefix = "",
)

# Matching .ipk for the embedded/opkg path (dist/ipkg/). Same binary set; the
# runtime sources aren't shipped to embedded targets (they run prebuilt binaries),
# so the runtime ipk is binary-only (supervisor).
pkg_opkg(
    name = "theia-runtime_ipk",
    package = "theia-runtime",
    version = _VERSION,
    arch = "x86_64",
    description = "Theia runtime (supervisor binary) — embedded/opkg",
    files = {
        "//platform/supervisor/main:supervisor": "/opt/theia/bin/supervisor",
    },
)

pkg_opkg(
    name = "theia-services_ipk",
    package = "theia-services",
    version = _VERSION,
    arch = "x86_64",
    description = "Theia ARA platform services (binaries) — embedded/opkg",
    depends = "theia-runtime",
    # Full service set — keep in lockstep with theia-services_deb + manifest.services.rig.
    files = {
        "//services/com/main:com": "/opt/theia/bin/com",
        "//services/per/main:per": "/opt/theia/bin/per",
        "//services/sm/main:sm": "/opt/theia/bin/sm",
        "//services/ucm/main:ucm": "/opt/theia/bin/ucm",
        "//services/vucm/main:vucm": "/opt/theia/bin/vucm",
        "//services/log/main:log": "/opt/theia/bin/log",
        "//services/shwa/main:shwa": "/opt/theia/bin/shwa",
        "//services/nm/main:nm": "/opt/theia/bin/nm",
        "//services/osi/main:osi": "/opt/theia/bin/osi",
        "//services/phm/main:phm": "/opt/theia/bin/phm",
        "//services/rds/main:rds": "/opt/theia/bin/rds",
        "//services/tsync/main:tsync": "/opt/theia/bin/tsync",
        "//services/crypto/main:crypto": "/opt/theia/bin/crypto",
        "//services/diag/main:diag": "/opt/theia/bin/diag",
        "//services/fw/main:fw": "/opt/theia/bin/fw",
        "//services/idsm/main:idsm": "/opt/theia/bin/idsm",
    },
)

# Convenience: build the bazel-buildable package set in one shot.
filegroup(
    name = "debs",
    srcs = [
        ":theia-runtime_deb",
        ":theia-runtime-dev_deb",
        ":theia-services_deb",
        ":theia-services-dev_deb",
        ":theia-system-dev_deb",
    ],
)

# Machine-only debs (a run-time target — no -dev build files).
filegroup(
    name = "machine_debs",
    srcs = [":theia-runtime_deb", ":theia-services_deb"],
)

filegroup(
    name = "ipks",
    srcs = [":theia-runtime_ipk", ":theia-services_ipk"],
)
