# platform/proto — nanopb C sources mirroring .art package paths.
#
# Each subdirectory holds one .proto and its generated .pb.{h,c},
# laid out as `<package-path>/<Iface>.{proto,pb.h,pb.c}`. Apps and
# libgw take a dep on this single cc_library and `#include
# "<package-path>/<Iface>.pb.h"`.

package(default_visibility = ["//visibility:public"])

load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "platform_protos",
    srcs = [
        "//platform/proto/gateway/system:status_pb_c",
        "//platform/proto/system/autosar/mlbevo_gen2/flexray:flexray_pb_c",
        "//platform/proto/system/demo:demo_pb_c",
        "//platform/proto/system/gateway:gateway_pb_c",
        "//platform/proto/system/odd_path_monitor:odd_path_monitor_pb_c",
        "//platform/proto/system/services/com:com_pb_c",
        "//platform/proto/system/services/exec:exec_pb_c",
        "//platform/proto/system/services/log:log_pb_c",
        "//platform/proto/system/services/per:per_pb_c",
        "//platform/proto/system/services/shwa:shwa_pb_c",
        "//platform/proto/system/services/sm:sm_pb_c",
        "//platform/proto/system/services/ucm:ucm_pb_c",
        "//platform/proto/system/supervisor:supervisor_pb_c",
    ],
    hdrs = [
        "//platform/proto/gateway/system:status_pb_h",
        "//platform/proto/system/autosar/mlbevo_gen2/flexray:flexray_pb_h",
        "//platform/proto/system/demo:demo_pb_h",
        "//platform/proto/system/gateway:gateway_pb_h",
        "//platform/proto/system/odd_path_monitor:odd_path_monitor_pb_h",
        "//platform/proto/system/services/com:com_pb_h",
        "//platform/proto/system/services/exec:exec_pb_h",
        "//platform/proto/system/services/log:log_pb_h",
        "//platform/proto/system/services/per:per_pb_h",
        "//platform/proto/system/services/shwa:shwa_pb_h",
        "//platform/proto/system/services/sm:sm_pb_h",
        "//platform/proto/system/services/ucm:ucm_pb_h",
        "//platform/proto/system/supervisor:supervisor_pb_h",
    ],
    # platform/proto is the include root: callers write
    # #include "gateway/system/status.pb.h"
    # #include "system/services/sm/sm.pb.h"
    includes = ["."],
    copts = ["-fPIC"],
    # Cross-package: supervisor.pb.h #includes "platform_runtime/runtime.pb.h"
    # (its TraceConfig embeds platform.runtime.TraceControlPush). Pull in the
    # lightweight runtime-proto header lib so the nested type resolves.
    deps = ["//platform/runtime:runtime_proto_cc"],
    # Consumers link the system nanopb runtime via -l:libprotobuf-nanopb.a
    # in their own linkopts (same convention as platform/runtime). Keeping
    # the cc_library dep-free avoids the Bazel @nanopb module which doesn't
    # cleanly expose a usable cc_library target on this bazel version.
)
